# terraria-cpp

./: CMakeLists.txt
cmake/: Findglfw3.cmake
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp
